tests/integration/security/sds_ingress/testdata/bookinfo-multiple-mtls-gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-1
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https-bookinfo-1
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: "bookinfo-credential-1" # must be the same as secret
      hosts:
        - "bookinfo1.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-2
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https-bookinfo-2
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: "bookinfo-credential-2" # must be the same as secret
      hosts:
        - "bookinfo2.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-3
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https-bookinfo-3
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: "bookinfo-credential-3" # must be the same as secret
      hosts:
        - "bookinfo3.example.com"
---
