tests/integration/security/sds_ingress/testdata/bookinfo-multiple-virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo1
spec:
  hosts:
  - "bookinfo1.example.com"
  gateways:
  - bookinfo-gateway-1
  http:
  - match:
    - uri:
        exact: /backend
    route:
    - destination:
        host: server
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo2
spec:
  hosts:
  - "bookinfo2.example.com"
  gateways:
  - bookinfo-gateway-2
  http:
  - match:
    - uri:
        exact: /backend
    route:
    - destination:
        host: server
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo3
spec:
  hosts:
  - "bookinfo3.example.com"
  gateways:
  - bookinfo-gateway-3
  http:
  - match:
    - uri:
        exact: /backend
    route:
    - destination:
        host: server
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo4
spec:
  hosts:
    - "bookinfo4.example.com"
  gateways:
    - bookinfo-gateway-4
  http:
  - match:
    - uri:
        exact: /backend
    route:
    - destination:
        host: server
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo5
spec:
  hosts:
    - "bookinfo5.example.com"
  gateways:
    - bookinfo-gateway-5
  http:
  - match:
    - uri:
        exact: /backend
    route:
    - destination:
        host: server
        port:
          number: 80
