tests/integration/security/sds_ingress/testdata/bookinfo-productpage-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: server
  subsets:
    - name: v1
      labels:
        version: v1
---
