tests/integration/security/sds_ingress/testdata/bookinfo-single-tls-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-4
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https-bookinfo-4
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: "bookinfo-credential-4" # must be the same as secret
      hosts:
      - "bookinfo4.example.com"
