tests/integration/security/sds_ingress/testdata/bookinfo-single-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo4
spec:
  hosts:
    - "bookinfo4.example.com"
  gateways:
    - bookinfo-gateway-4
  http:
    - match:
        - uri:
            exact: /productpage
        - uri:
            exact: /login
        - uri:
            exact: /logout
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: productpage
            port:
              number: 9080
